wordpress/easycloudhost/easycloudhost-shop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: easycloudhost-shop-app
  name: easycloudhost-shop-app
  namespace: wordpress-easycloudhost
  annotations:
    backup.velero.io/backup-volumes: easycloudhost-shop-pv
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: easycloudhost-shop-app
  template:
    metadata:
      labels:
        app: easycloudhost-shop-app
    spec:
      containers:
        # redis is at redis-service.wordpressdb.svc.cluster.local
        - env:
            - name: WORDPRESS_DB_HOST
              value: mariadb-service.wordpressdb.svc.cluster.local
            - name: WORDPRESS_DB_USER
              value: easycloudhost
            - name: WORDPRESS_DB_NAME
              value: wordpress_easycloudhost
            - name: WORDPRESS_DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: easycloudhostwppw 
                  key: MARIADB_PASSWORD
          image: wordpress:latest
          imagePullPolicy: Always
          name: easycloudhost-shop-app
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: 128m
            limits:
              memory: "2Gi"
              cpu: 2000m
          volumeMounts:
            - mountPath: /var/www/html
              name: easycloudhost-shop-pv
      restartPolicy: Always
      volumes:
        - name: easycloudhost-shop-pv
          persistentVolumeClaim:
            claimName: easycloudhost-shop-pvc
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: easycloudhost-shop
  name: easycloudhost-shop-service
  namespace: wordpress-easycloudhost
spec:
  ports:
    - name: "easycloudhost-shop-service"
      port: 80
      targetPort: 80
  selector:
    app: easycloudhost-shop-app
