wordpress/easycloudhost/wordpress-ingress-easycloudhost.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wordpress-easycloudhost
  namespace: wordpress-easycloudhost
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/enable-cors: "true"
    # nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   more_set_headers "X-Robots-Tag: noindex, nofollow";
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - shop.easycloudhost.de
    secretName: tls-secret
  rules:
  - host: "shop.easycloudhost.de"
    http:
      paths:
        - path: "/" # wildcard for now
          pathType: Prefix
          backend:
            service:
              name: easycloudhost-shop-service
              port:
                number: 80
